--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,21 @@ version = "1.0.0a0"
 description = "Run pre-commit hook entry. Allow to run pre-commit hooks for text editor formatting / linting needs."
 authors = ["Igor Davydenko <iam@igordavydenko.com>"]
 license = "BSD-3-Clause"
+readme = "README.rst"
 homepage = "https://igordavydenko.com/projects/#pre-commit-run-hook-entry"
 repository = "https://github.com/playpauseandstop/pre-commit-run-hook-entry"
 keywords = ["pre-commit", "pre-commit hook", "vscode", "sublime-text3"]
+classifiers = [
+  "Development Status :: 3 - Alpha",
+  "Environment :: Plugins",
+  "Intended Audience :: Developers",
+  "License :: OSI Approved :: BSD License",
+  "Operating System :: OS Independent",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3 :: Only",
+  "Topic :: Utilities",
+  "Typing :: Typed"
+]
 
 [tool.poetry.dependencies]
 python = ">=3.6.1"
