--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   DEV_PYTHON_VERSION: "3.8"
-  POETRY_VERSION: "1.0.5"
+  POETRY_VERSION: "1.0.9"
   TWINE_VERSION: "3.1.1"
 
 jobs:
@@ -26,7 +26,7 @@ jobs:
       - uses: "actions/checkout@v2.0.0"
 
       - name: "Install Python"
-        uses: "actions/setup-python@v1.2.0"
+        uses: "actions/setup-python@v2.0.1"
         with:
           python-version: "${{ env.DEV_PYTHON_VERSION }}"
 
@@ -54,7 +54,7 @@ jobs:
       - uses: "actions/checkout@v2.0.0"
 
       - name: "Install Python"
-        uses: "actions/setup-python@v1.2.0"
+        uses: "actions/setup-python@v2.0.1"
         with:
           python-version: "${{ matrix.python-version }}"
 
@@ -62,11 +62,11 @@ jobs:
         uses: "dschep/install-poetry-action@v1.3"
         with:
           version: "${{ env.POETRY_VERSION }}"
-          create_virtualenvs: true
 
       - name: "Install package"
         run: |
-          poetry config virtualenvs.in-project true
+          poetry config --local virtualenvs.create true
+          poetry config --local virtualenvs.in-project true
           poetry install --no-dev
 
       - name: "Cache pre-commit"
@@ -90,7 +90,7 @@ jobs:
       - uses: "actions/checkout@v2.0.0"
 
       - name: "Install Python"
-        uses: "actions/setup-python@v1.2.0"
+        uses: "actions/setup-python@v2.0.1"
         with:
           python-version: "${{ env.DEV_PYTHON_VERSION }}"
 
@@ -98,7 +98,6 @@ jobs:
         uses: "dschep/install-poetry-action@v1.3"
         with:
           version: "${{ env.POETRY_VERSION }}"
-          create_virtualenvs: true
 
       - name: "Build package"
         run: "poetry build"
@@ -114,3 +113,47 @@ jobs:
         with:
           user: "${{ secrets.PYPI_USERNAME }}"
           password: "${{ secrets.PYPI_PASSWORD }}"
+
+  release:
+    if: "startsWith(github.ref, 'refs/tags')"
+    needs: "package"
+    runs-on: "ubuntu-latest"
+
+    steps:
+      - uses: "actions/checkout@v2.0.0"
+
+      - name: "Fetch git data"
+        run: |
+          set -e
+          git fetch --depth=1 origin +refs/tags/*:refs/tags/*
+          git fetch --prune --unshallow
+
+      - id: "release-info"
+        name: "Prepare release info"
+        run: |
+          set -e
+
+          tag_name=${GITHUB_REF:10}
+          echo "::set-output name=tag_name::${tag_name}"
+
+          subject=$(git tag -l --format="%(subject)" ${tag_name})
+          echo "::set-output name=subject::${subject}"
+
+          body=$(git tag -l --format="%(body)" ${tag_name})
+          echo "::set-output name=body::${body}"
+
+          prerelease=false
+          if [ ${{ contains(github.event.ref, 'a') }} = true -o ${{ contains(github.event.ref, 'b') }} = true -o ${{ contains(github.event.ref, 'rc') }} = true ]; then
+            prerelease=true
+          fi
+          echo "::set-output name=prerelease::${prerelease}"
+
+      - name: "Create new release"
+        uses: "actions/create-release@v1.1.0"
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+        with:
+          tag_name: "${{ steps.release-info.outputs.tag_name }}"
+          release_name: "${{ steps.release-info.outputs.subject }}"
+          body: "${{ steps.release-info.outputs.body }}"
+          prerelease: "${{ steps.release-info.outputs.prerelease }}"
