--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on:
     branches: ["master"]
 
 env:
+  COVERALLS_VERSION: "2.0.0"
   DEV_PYTHON_VERSION: "3.8"
   POETRY_VERSION: "1.0.9"
   TWINE_VERSION: "3.1.1"
@@ -46,7 +47,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.6", "3.7", "3.8"]
+        python-version: ["3.7", "3.8"]
 
     runs-on: "ubuntu-latest"
 
@@ -67,7 +68,7 @@ jobs:
         run: |
           poetry config --local virtualenvs.create true
           poetry config --local virtualenvs.in-project true
-          poetry install --no-dev
+          poetry install
 
       - name: "Cache pre-commit"
         if: "matrix.python-version == env.DEV_PYTHON_VERSION"
@@ -79,6 +80,18 @@ jobs:
       - name: "Run pre-commit"
         if: "matrix.python-version == env.DEV_PYTHON_VERSION"
         uses: "pre-commit/action@v1.0.1"
+
+      - name: "Run tests"
+        if: "matrix.python-version == env.DEV_PYTHON_VERSION"
+        run: "poetry run python -m pytest --cov --no-cov-on-fail"
+
+      - name: "Send report to coveralls"
+        if: "matrix.python-version == env.DEV_PYTHON_VERSION"
+        env:
+          COVERALLS_REPO_TOKEN: "${{ secrets.COVERALLS_REPO_TOKEN }}"
+        run: |
+          python -m pip install coveralls==${{ env.COVERALLS_VERSION }}
+          python -m coveralls
 
   package:
     needs: "test"
