feat: Provide pre-commit-which-hook-entry script
This script is useful for cases when text editor plugin is not able to
use run hook entry script, but it allows to provide full path to the
tool, such as eslint or prettier.

Also mark the script as dangerous to use cause of fact that pre-commit
internals does not intend to be used in external scripts.

Fixes: #3
Fixes: #4
Fixes: #8

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ show_missing = true
 
 [tool.poetry]
 name = "pre-commit-run-hook-entry"
-version = "1.0.0a1"
+version = "1.0.0a2"
 description = "Run pre-commit hook entry. Allow to run pre-commit hooks for text editor formatting / linting needs."
 authors = ["Igor Davydenko <iam@igordavydenko.com>"]
 license = "BSD-3-Clause"
@@ -46,6 +46,7 @@ pytest-cov = "^2.9.0"
 [tool.poetry.scripts]
 pre-commit-run-black-entry = "pre_commit_run_hook_entry:main_black"
 pre-commit-run-hook-entry = "pre_commit_run_hook_entry:main"
+pre-commit-which-hook-entry = "pre_commit_run_hook_entry:main_which"
 
 [tool.poetry.urls]
 "Bug Tracker" = "https://github.com/playpauseandstop/pre-commit-run-hook-entry/issues"
