--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
     runs-on: "${{ matrix.os }}"
 
     steps:
-      - uses: "actions/checkout@v2.0.0"
+      - uses: "actions/checkout@v2.3.1"
 
       - name: "Install Python"
         uses: "actions/setup-python@v2.0.1"
@@ -52,7 +52,7 @@ jobs:
     runs-on: "ubuntu-latest"
 
     steps:
-      - uses: "actions/checkout@v2.0.0"
+      - uses: "actions/checkout@v2.3.1"
 
       - name: "Install Python"
         uses: "actions/setup-python@v2.0.1"
@@ -77,7 +77,7 @@ jobs:
           key: "pre-commit-${{ matrix.python-version }}-${{ hashFiles('.pre-commit-config.yaml') }}"
 
       - name: "Run pre-commit"
-        uses: "pre-commit/action@v1.0.1"
+        uses: "pre-commit/action@v2.0.0"
 
       - name: "Run tests"
         run: |
@@ -104,7 +104,7 @@ jobs:
     runs-on: "ubuntu-latest"
 
     steps:
-      - uses: "actions/checkout@v2.0.0"
+      - uses: "actions/checkout@v2.3.1"
 
       - name: "Install Python"
         uses: "actions/setup-python@v2.0.1"
@@ -126,7 +126,7 @@ jobs:
 
       - name: "Publish package"
         if: "github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')"
-        uses: "pypa/gh-action-pypi-publish@v1.1.0"
+        uses: "pypa/gh-action-pypi-publish@v1.3.1"
         with:
           user: "${{ secrets.PYPI_USERNAME }}"
           password: "${{ secrets.PYPI_PASSWORD }}"
@@ -137,7 +137,7 @@ jobs:
     runs-on: "ubuntu-latest"
 
     steps:
-      - uses: "actions/checkout@v2.0.0"
+      - uses: "actions/checkout@v2.3.1"
 
       - name: "Fetch git data"
         run: |
@@ -165,13 +165,13 @@ jobs:
           echo "::set-output name=body::${body}"
 
           prerelease=false
-          if [ ${{ contains(github.event.ref, 'a') }} = true -o ${{ contains(github.event.ref, 'b') }} = true -o ${{ contains(github.event.ref, 'rc') }} = true ]; then
+          if [ -z "${tag_name##*a*}" -o -z "${tag_name##*b*}" -o -z "${tag_name##*rc*}" ]; then
             prerelease=true
           fi
           echo "::set-output name=prerelease::${prerelease}"
 
       - name: "Create new release"
-        uses: "actions/create-release@v1.1.0"
+        uses: "actions/create-release@v1.1.2"
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
         with:
