feat: Support latest pre-commit
As well as provide bunch of dev updates,

- Bump pre-commit hooks
- Update git ignore list
- Update poetry local config
- Update GitHub actions
- Enable dependabot

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,15 +1,25 @@
 root = true
 
 [*]
-indent_style = space
-indent_size = 4
 charset = utf-8
-trim_trailing_whitespace = true
+end_of_line = lf
+indent_style = space
 insert_final_newline = true
+trim_trailing_whitespace = true
 
-[*.{css,html,js,json,md,toml,yml,yaml}]
+[{.babelrc,.compressrc,.eslintrc}]
 indent_size = 2
 
-[Makefile]
+[*.{css,cfg,html,ini,js,json,md,service,toml,yaml,yml,xml}]
+indent_size = 2
+
+[*.{elm,nginx,py,rst,sh}]
+indent_size = 4
+
+[*Makefile*]
+indent_style = tab
+tab_width = 4
+
+[*.mk]
 indent_style = tab
 tab_width = 4
