--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,9 +8,9 @@ on:
     branches: ["master"]
 
 env:
-  COVERALLS_VERSION: "2.0.0"
+  COVERALLS_VERSION: "2.1.1"
   DEV_PYTHON_VERSION: "3.8"
-  POETRY_VERSION: "1.0.9"
+  POETRY_VERSION: "1.0.10"
   TWINE_VERSION: "3.1.1"
 
 jobs:
@@ -24,10 +24,10 @@ jobs:
     runs-on: "${{ matrix.os }}"
 
     steps:
-      - uses: "actions/checkout@v2.3.1"
+      - uses: "actions/checkout@v2.3.2"
 
       - name: "Install Python"
-        uses: "actions/setup-python@v2.0.1"
+        uses: "actions/setup-python@v2.1.2"
         with:
           python-version: "${{ env.DEV_PYTHON_VERSION }}"
 
@@ -52,10 +52,10 @@ jobs:
     runs-on: "ubuntu-latest"
 
     steps:
-      - uses: "actions/checkout@v2.3.1"
+      - uses: "actions/checkout@v2.3.2"
 
       - name: "Install Python"
-        uses: "actions/setup-python@v2.0.1"
+        uses: "actions/setup-python@v2.1.2"
         with:
           python-version: "${{ matrix.python-version }}"
 
@@ -66,15 +66,7 @@ jobs:
 
       - name: "Install package"
         run: |
-          poetry config --local virtualenvs.create true
-          poetry config --local virtualenvs.in-project true
           poetry install
-
-      - name: "Cache pre-commit"
-        uses: "actions/cache@v2.0.0"
-        with:
-          path: "~/.cache/pre-commit"
-          key: "pre-commit-${{ matrix.python-version }}-${{ hashFiles('.pre-commit-config.yaml') }}"
 
       - name: "Run pre-commit"
         uses: "pre-commit/action@v2.0.0"
@@ -92,7 +84,7 @@ jobs:
       - name: "Send report to coveralls"
         if: "matrix.python-version == env.DEV_PYTHON_VERSION"
         env:
-          COVERALLS_REPO_TOKEN: "${{ secrets.COVERALLS_REPO_TOKEN }}"
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
         run: |
           python -m pip install coveralls==${{ env.COVERALLS_VERSION }}
           python -m coveralls
@@ -104,10 +96,10 @@ jobs:
     runs-on: "ubuntu-latest"
 
     steps:
-      - uses: "actions/checkout@v2.3.1"
+      - uses: "actions/checkout@v2.3.2"
 
       - name: "Install Python"
-        uses: "actions/setup-python@v2.0.1"
+        uses: "actions/setup-python@v2.1.2"
         with:
           python-version: "${{ env.DEV_PYTHON_VERSION }}"
 
@@ -137,7 +129,7 @@ jobs:
     runs-on: "ubuntu-latest"
 
     steps:
-      - uses: "actions/checkout@v2.3.1"
+      - uses: "actions/checkout@v2.3.2"
 
       - name: "Fetch git data"
         run: |
@@ -171,7 +163,7 @@ jobs:
           echo "::set-output name=prerelease::${prerelease}"
 
       - name: "Create new release"
-        uses: "actions/create-release@v1.1.2"
+        uses: "actions/create-release@v1.1.3"
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
         with:
