--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,7 @@ htmlcov/
 nosetests.xml
 coverage.xml
 *.cover
+*.py,cover
 .hypothesis/
 .pytest_cache/
 
@@ -63,6 +64,7 @@ coverage.xml
 *.log
 local_settings.py
 db.sqlite3
+db.sqlite3-journal
 
 # Flask stuff:
 instance/
@@ -85,17 +87,22 @@ profile_default/
 ipython_config.py
 
 # pyenv
-.python-version
+#   Do not ignore pyenv local version
+#.python-version
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
 #   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don’t work, or not
+#   having no cross-platform support, pipenv may install dependencies that don't work, or not
 #   install all needed dependencies.
 #Pipfile.lock
 
-# celery beat schedule file
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+__pypackages__/
+
+# Celery stuff
 celerybeat-schedule
+celerybeat.pid
 
 # SageMath parsed files
 *.sage.py
@@ -127,13 +134,17 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+# pytype static type analyzer
+.pytype/
+
 # End of https://www.toptal.com/developers/gitignore/api/python
 
-# poetry virtualenv
-.venv
+# DotENV files
+.env.*
+!.env.test
 
-# make install target
-.install
+# Makefile target
+.install*
 
-# Sublime Text workspace
+# Sublime Text 3 workspace
 *.sublime-workspace
