--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,29 +1,29 @@
 minimum_pre_commit_version: "1.17.0"
 repos:
   - repo: "https://github.com/commitizen-tools/commitizen"
-    rev: "v1.23.0"
+    rev: "v2.1.0"
     hooks:
       - id: "commitizen"
         stages: ["commit-msg"]
 
   - repo: "https://github.com/psf/black"
-    rev: "19.10b0"
+    rev: "20.8b1"
     hooks:
       - id: "black"
         name: "Format code (black)"
         exclude: ^docs/.*$
 
   - repo: "https://github.com/asottile/blacken-docs"
-    rev: "v1.7.0"
+    rev: "v1.8.0"
     hooks:
       - id: "blacken-docs"
         name: "Format docs (blacken-docs)"
         args: ["-l", "64"]
         additional_dependencies:
-          - "black==19.10b0"
+          - "black==20.8b1"
 
   - repo: "https://github.com/pre-commit/pre-commit-hooks"
-    rev: "v3.1.0"
+    rev: "v3.2.0"
     hooks:
       - id: "end-of-file-fixer"
       - id: "trailing-whitespace"
@@ -66,13 +66,5 @@ repos:
     hooks:
       - id: "mypy"
         name: "Lint code (mypy)"
-        args: [
-          "--python-executable=.venv/bin/python"
-        ]
+        args: ["--python-executable=.venv/bin/python3"]
         exclude: ^docs/.*$
-
-  - repo: "https://github.com/myint/rstcheck"
-    rev: "3f92957478422df87bd730abde66f089cc1ee19b"
-    hooks:
-      - id: "rstcheck"
-        name: "Lint docs (rstcheck)"
