--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,8 @@ show_missing = true
 
 [tool.poetry]
 name = "pre-commit-run-hook-entry"
-version = "1.0.0a2"
-description = "Run pre-commit hook entry. Allow to run pre-commit hooks for text editor formatting / linting needs."
+version = "1.0.0a3"
+description = "Run pre-commit hook entry. Allow to run pre-commit hooks for text editor formatting / linting needs"
 authors = ["Igor Davydenko <iam@igordavydenko.com>"]
 license = "BSD-3-Clause"
 readme = "README.rst"
@@ -36,7 +36,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.7"
-pre-commit = "^2.4.0"
+pre-commit = "^2.7.1"
 
 [tool.poetry.dev-dependencies]
 coverage = {extras = ["toml"], version = "^5.1"}
