--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ pre-commit = "^2.7.1"
 
 [tool.poetry.dev-dependencies]
 coverage = {extras = ["toml"], version = "^5.1"}
-pytest = "^5.4.3"
+pytest = "^6.0.1"
 pytest-cov = "^2.9.0"
 
 [tool.poetry.scripts]
@@ -50,6 +50,10 @@ pre-commit-which-hook-entry = "pre_commit_run_hook_entry:main_which"
 
 [tool.poetry.urls]
 "Bug Tracker" = "https://github.com/playpauseandstop/pre-commit-run-hook-entry/issues"
+
+[tool.pytest.ini_options]
+addopts = "--cov --no-cov-on-fail"
+python_files = "tests.py"
 
 [build-system]
 requires = ["poetry>=0.12"]
