--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,10 +8,10 @@ on:
     branches: ["master"]
 
 env:
-  COVERALLS_VERSION: "2.1.1"
-  DEV_PYTHON_VERSION: "3.8"
-  POETRY_VERSION: "1.0.10"
-  TWINE_VERSION: "3.1.1"
+  BADABUMP_VERSION: "21.3.3"
+  COVERALLS_VERSION: "2.27.1"
+  POETRY_VERSION: "1.1.3"
+  TWINE_VERSION: "4.0.1"
 
 jobs:
   dev:
@@ -24,87 +24,116 @@ jobs:
     runs-on: "${{ matrix.os }}"
 
     steps:
-      - uses: "actions/checkout@v2.3.2"
+      - uses: "actions/checkout@v3.0.2"
 
       - name: "Install Python"
-        uses: "actions/setup-python@v2.1.2"
+        uses: "actions/setup-python@v4.0.0"
         with:
-          python-version: "${{ env.DEV_PYTHON_VERSION }}"
+          python-version-file: ".python-version"
 
       - name: "Install poetry"
-        uses: "dschep/install-poetry-action@v1.3"
+        uses: "snok/install-poetry@v1.3.1"
         with:
           version: "${{ env.POETRY_VERSION }}"
 
+      - name: "Cache venv"
+        uses: "actions/cache@v3.0.4"
+        with:
+          path: ".venv/"
+          key: "venv-dev-${{ hashFiles('poetry.lock') }}"
+
       - name: "Install package"
-        run: "poetry install --no-dev"
+        run: "poetry install"
 
       - name: "Import package"
-        run: "poetry run python -c 'import pre_commit_run_hook_entry'"
+        run: "poetry run python3 -c 'import pre_commit_run_hook_entry'"
 
   test:
     name: "Python ${{ matrix.python-version }}"
 
     strategy:
       matrix:
-        python-version: ["3.7", "3.8"]
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11.0-beta.3"]
+        include:
+          - python-version: "3.7"
+            python-cache-key: "3.7"
+
+          - python-version: "3.8"
+            python-cache-key: "3.8"
+
+          - python-version: "3.9"
+            python-cache-key: "3.9"
+
+          - python-version: "3.10"
+            python-cache-key: "dev"
+
+          - python-version: "3.11.0-beta.3"
+            python-cache-key: "3.11.0-beta.3"
 
     runs-on: "ubuntu-latest"
 
     steps:
-      - uses: "actions/checkout@v2.3.2"
+      - uses: "actions/checkout@v3.0.2"
 
       - name: "Install Python"
-        uses: "actions/setup-python@v2.1.2"
+        uses: "actions/setup-python@v4.0.0"
         with:
           python-version: "${{ matrix.python-version }}"
 
       - name: "Install poetry"
-        uses: "dschep/install-poetry-action@v1.3"
+        uses: "snok/install-poetry@v1.3.1"
         with:
           version: "${{ env.POETRY_VERSION }}"
 
+      - name: "Cache venv"
+        uses: "actions/cache@v3.0.4"
+        with:
+          path: ".venv/"
+          key: "venv-${{ matrix.python-cache-key }}-${{ hashFiles('poetry.lock') }}"
+
       - name: "Install package"
-        run: |
-          poetry install
+        run: "poetry install"
 
       - name: "Run pre-commit"
-        uses: "pre-commit/action@v2.0.0"
+        if: "${{ matrix.python-cache-key == 'dev' }}"
+        uses: "pre-commit/action@v3.0.0"
 
       - name: "Run tests"
         run: |
-          set -e
+          set -euo pipefail
 
-          if [ "${{ matrix.python-version }}" != "${{ env.DEV_PYTHON_VERSION }}" ]; then
+          if [ "${{ matrix.python-cache-key }}" != "dev" ]; then
             export PYTEST_ADDOPTS="--no-cov"
           fi
 
-          poetry run python -m pytest
+          poetry run python3 -m pytest
 
       - name: "Send report to coveralls"
-        if: "matrix.python-version == env.DEV_PYTHON_VERSION"
+        if: "${{ matrix.python-cache-key == 'dev' }}"
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
         run: |
-          python -m pip install coveralls==${{ env.COVERALLS_VERSION }}
-          python -m coveralls
+          set -euo pipefail
+
+          python3 -m pip install coveralls==${{ env.COVERALLS_VERSION }}
+          python3 -m coveralls --service=github
 
   package:
-    needs: "test"
+    needs: ["test"]
     name: "Build & deploy package"
 
     runs-on: "ubuntu-latest"
 
     steps:
-      - uses: "actions/checkout@v2.3.2"
+      - uses: "actions/checkout@v3.0.2"
 
       - name: "Install Python"
-        uses: "actions/setup-python@v2.1.2"
+        uses: "actions/setup-python@v4.0.0"
         with:
-          python-version: "${{ env.DEV_PYTHON_VERSION }}"
+          python-version-file: ".python-version"
 
       - name: "Install poetry"
-        uses: "dschep/install-poetry-action@v1.3"
+        uses: "snok/install-poetry@v1.3.1"
         with:
           version: "${{ env.POETRY_VERSION }}"
 
@@ -113,61 +142,64 @@ jobs:
 
       - name: "Check package"
         run: |
-          python -m pip install twine==${{ env.TWINE_VERSION }}
-          python -m twine check dist/*
+          set -euo pipefail
+
+          python3 -m pip install twine==${{ env.TWINE_VERSION }}
+          python3 -m twine check ./dist/*
 
       - name: "Publish package"
-        if: "github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')"
-        uses: "pypa/gh-action-pypi-publish@v1.3.1"
+        if: "${{ github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags') }}"
+        uses: "pypa/gh-action-pypi-publish@v1.5.0"
         with:
           user: "${{ secrets.PYPI_USERNAME }}"
           password: "${{ secrets.PYPI_PASSWORD }}"
 
   release:
-    if: "startsWith(github.ref, 'refs/tags')"
-    needs: "package"
+    needs: ["package"]
+    if: "${{ startsWith(github.ref, 'refs/tags/') }}"
+    name: "Create GitHub release"
+
     runs-on: "ubuntu-latest"
 
     steps:
-      - uses: "actions/checkout@v2.3.2"
+      - uses: "actions/checkout@v3.0.2"
 
       - name: "Fetch git data"
         run: |
-          set -e
+          set -euo pipefail
+
           git fetch --depth=1 origin +refs/tags/*:refs/tags/*
           git fetch --prune --unshallow
 
-      - id: "release-info"
+      - name: "Install Python"
+        uses: "actions/setup-python@v4.0.0"
+        with:
+          python-version-file: ".python-version"
+
+      - name: "Install poetry"
+        uses: "snok/install-poetry@v1.3.1"
+        with:
+          version: "${{ env.POETRY_VERSION }}"
+
+      - name: "Cache venv"
+        uses: "actions/cache@v3.0.4"
+        with:
+          path: ".venv"
+          key: "venv-dev-${{ hashFiles('poetry.lock') }}"
+
+      - name: "Install package without dev dependencies"
+        run: "poetry install --no-dev"
+
+      - id: "badabump"
         name: "Prepare release info"
-        run: |
-          set -e
-
-          tag_name=${GITHUB_REF:10}
-          echo "::set-output name=tag_name::${tag_name}"
-
-          subject=$(git tag -l --format="%(subject)" ${tag_name})
-          echo "::set-output name=subject::${subject}"
-
-          body=$(git tag -l --format="%(body)" ${tag_name})
-          # Preserve multiline strings as per
-          # https://github.community/t/set-output-truncates-multiline-strings/16852/5
-          body="${body//'%'/'%25'}"
-          body="${body//$'\n'/'%0A'}"
-          body="${body//$'\r'/'%0D'}"
-          echo "::set-output name=body::${body}"
-
-          prerelease=false
-          if [ -z "${tag_name##*a*}" -o -z "${tag_name##*b*}" -o -z "${tag_name##*rc*}" ]; then
-            prerelease=true
-          fi
-          echo "::set-output name=prerelease::${prerelease}"
+        run: 'poetry run python3 -m badabump.ci prepare_release "${{ github.ref }}"'
 
       - name: "Create new release"
-        uses: "actions/create-release@v1.1.3"
+        uses: "actions/create-release@v1.1.4"
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
         with:
-          tag_name: "${{ steps.release-info.outputs.tag_name }}"
-          release_name: "${{ steps.release-info.outputs.subject }}"
-          body: "${{ steps.release-info.outputs.body }}"
-          prerelease: "${{ steps.release-info.outputs.prerelease }}"
+          tag_name: "${{ steps.badabump.outputs.tag_name }}"
+          release_name: "${{ steps.badabump.outputs.release_name }}"
+          body: "${{ steps.badabump.outputs.release_body }}"
+          prerelease: "${{ steps.badabump.outputs.is_pre_release }}"
