--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,44 @@ source = ["pre_commit_run_hook_entry"]
 source = ["pre_commit_run_hook_entry.py"]
 
 [tool.coverage.report]
-fail_under = 85
 skip_covered = true
 show_missing = true
+
+[tool.isort]
+profile = "attrs"
+combine_as_imports = true
+force_alphabetical_sort_within_sections = true
+lines_between_types = 0
+src_paths = ["./", "./src/"]
+virtual_env = "./.venv/"
+
+[tool.mypy]
+allow_untyped_globals = true
+check_untyped_defs = true
+disallow_any_decorated = true
+disallow_any_generics = true
+disallow_incomplete_defs = true
+disallow_untyped_calls = true
+disallow_untyped_decorators = true
+disallow_untyped_defs = true
+follow_imports = "normal"
+follow_imports_for_stubs = true
+ignore_missing_imports = true
+namespace_packages = true
+show_column_numbers = true
+show_error_codes = true
+warn_redundant_casts = true
+warn_return_any = true
+warn_unused_ignores = true
+
+[[tool.mypy.overrides]]
+module = [
+  "conftest",
+  "migrations.*",
+  "tests.*",
+  "*.tests"
+]
+ignore_errors = true
 
 [tool.poetry]
 name = "pre-commit-run-hook-entry"
@@ -36,12 +71,13 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.7"
-pre-commit = "^2.7.1"
+pre-commit = "^2.19.0"
 
 [tool.poetry.dev-dependencies]
-coverage = {extras = ["toml"], version = "^5.3"}
-pytest = "^6.1.2"
-pytest-cov = "^2.9.0"
+coverage = "^6.4.1"
+mypy = "^0.961"
+pytest = "^7.1.2"
+pytest-cov = "^3.0.0"
 
 [tool.poetry.scripts]
 pre-commit-run-black-entry = "pre_commit_run_hook_entry:main_black"
@@ -52,9 +88,11 @@ pre-commit-which-hook-entry = "pre_commit_run_hook_entry:main_which"
 "Bug Tracker" = "https://github.com/playpauseandstop/pre-commit-run-hook-entry/issues"
 
 [tool.pytest.ini_options]
+minversion = "7.1.2"
 addopts = "--cov --no-cov-on-fail"
 python_files = "tests.py"
+log_level = "info"
 
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
