--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,13 @@ on:
     branches: ["master"]
 
 env:
+  # Get latest versions by running,
+  #
+  # ```bash
+  # pip-latest-release badabump coverage coveralls poetry twine
+  # ```
   BADABUMP_VERSION: "21.3.3"
+  COVERAGE_VERSION: "3.4.1"
   COVERALLS_VERSION: "3.3.1"
   POETRY_VERSION: "1.1.3"
   TWINE_VERSION: "4.0.1"
@@ -87,7 +93,7 @@ jobs:
         run: |
           set -euo pipefail
 
-          python3 -m pip install coveralls==${{ env.COVERALLS_VERSION }}
+          python3 -m pip install coverage[toml]==${{ env.COVERAGE_VERSION }} coveralls==${{ env.COVERALLS_VERSION }}
           python3 -m coveralls --service=github
 
   package:
