--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,7 +76,7 @@ python = "^3.7"
 pre-commit = "^2.19.0"
 
 [tool.poetry.dev-dependencies]
-coverage = "^6.4.1"
+coverage = {extras = ["toml"], version = "^6.4.1"}
 mypy = "^0.961"
 pytest = "^7.1.2"
 pytest-cov = "^3.0.0"
