ci: Do not forget to use coveralls at CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
         with:
           python-path: "${{ steps.python_and_poetry.outputs.python-path }}"
           python-version: "${{ steps.python_and_poetry.outputs.python-version }}"
-          use-coveralls: "${{ matrix.dev }}"
+          use-coveralls: "true"
           coveralls-token: "${{ secrets.GITHUB_TOKEN }}"
 
   package:
