--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,10 +29,11 @@ jobs:
 
       - uses: "./.github/actions/install_python_and_poetry"
         with:
+          cache-key-suffix: "-main"
           python-version-file: ".python-version"
 
       - name: "Install package"
-        run: "poetry install"
+        run: "poetry install --only main"
 
       - name: "Import package"
         run: "poetry run python3 -c 'from pre_commit_run_hook_entry.cli import main'"
@@ -48,6 +49,7 @@ jobs:
       - id: "python_and_poetry"
         uses: "./.github/actions/install_python_and_poetry"
         with:
+          cache-key-suffix: "-main-dev-test"
           python-version-file: ".python-version"
 
       - uses: "./.github/actions/run_pre_commit"
