--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
     runs-on: "${{ matrix.os }}"
 
     steps:
-      - uses: "actions/checkout@v3.2.0"
+      - uses: "actions/checkout@v3.3.0"
 
       - uses: "./.github/actions/install_python_and_poetry"
         with:
@@ -38,6 +38,10 @@ jobs:
 
       - name: "Install package"
         run: "poetry install --only main"
+
+      - name: "Check that the poetry.lock file corresponds to the current version of pyproject.toml"
+        if: "${{ matrix.os == 'ubuntu-latest' }}"
+        run: "poetry lock --check"
 
       - name: "Import package"
         run: "poetry run python3 -c 'from pre_commit_run_hook_entry.cli import main'"
@@ -48,7 +52,7 @@ jobs:
     runs-on: "ubuntu-latest"
 
     steps:
-      - uses: "actions/checkout@v3.2.0"
+      - uses: "actions/checkout@v3.3.0"
 
       - id: "python_and_poetry"
         uses: "./.github/actions/install_python_and_poetry"
