--- a/.github/workflows/ci_package.yml
+++ b/.github/workflows/ci_package.yml
@@ -25,7 +25,7 @@ jobs:
     runs-on: "ubuntu-latest"
 
     steps:
-      - uses: "actions/checkout@v3.2.0"
+      - uses: "actions/checkout@v3.3.0"
 
       - id: "python_and_poetry"
         uses: "./.github/actions/install_python_and_poetry"
@@ -39,7 +39,7 @@ jobs:
         run: "pipx install --python='${{ steps.python_and_poetry.outputs.python-path }}' twine==${{ inputs.twine-version }}"
 
       - name: "Check package"
-        run: "twine check ./dist/*"
+        run: "twine check dist/*"
 
       - name: "Publish package"
         if: "${{ startsWith(github.ref, 'refs/tags/') }}"
