--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,9 +15,13 @@ updates:
       - "dependencies"
     allow:
       - dependency-type: "direct"
+    groups:
+      dev-dependencies:
+        dependency-type: "development"
 
   - package-ecosystem: "github-actions"
-    directory: "/"
+    directories:
+      - "/.github/**/*"
     schedule:
       interval: "monthly"
       time: "05:00"
@@ -30,3 +34,6 @@ updates:
       - "build"
       - "ci"
       - "dependencies"
+    groups:
+      ci-dependencies:
+        patterns: ["*"]
