--- a/.github/workflows/ci_package.yml
+++ b/.github/workflows/ci_package.yml
@@ -7,25 +7,16 @@ on:
         description: "Twine version to use."
         type: "string"
         required: false
-        default: "4.0.2"
-
-    secrets:
-      pypi-user:
-        description: "PyPI username to use."
-        required: true
-
-      pypi-password:
-        description: "PyPI password (token) to use."
-        required: true
+        default: "6.0.1"
 
 jobs:
   package:
     name: "Build & Deploy Package"
 
-    runs-on: "ubuntu-latest"
+    runs-on: "ubuntu-24.04"
 
     steps:
-      - uses: "actions/checkout@v3.3.0"
+      - uses: "actions/checkout@v4.2.2"
 
       - id: "python_and_poetry"
         uses: "./.github/actions/install_python_and_poetry"
@@ -43,7 +34,4 @@ jobs:
 
       - name: "Publish package"
         if: "${{ startsWith(github.ref, 'refs/tags/') }}"
-        uses: "pypa/gh-action-pypi-publish@v1.6.4"
-        with:
-          user: "${{ secrets.pypi-user }}"
-          password: "${{ secrets.pypi-password }}"
+        uses: "pypa/gh-action-pypi-publish@v1.12.3"
