--- a/.github/workflows/release_tag.yml
+++ b/.github/workflows/release_tag.yml
@@ -16,16 +16,16 @@ jobs:
     if: "${{ startsWith(github.head_ref, 'chore/release-') && github.event.pull_request.merged == true }}"
     name: "Auto Create Release Tag"
 
-    runs-on: "ubuntu-latest"
+    runs-on: "ubuntu-24.04"
 
     steps:
       - id: "token"
-        uses: "tibdex/github-app-token@v1.8.0"
+        uses: "tibdex/github-app-token@v2.1.0"
         with:
           app_id: "${{ secrets.BADABUMP_APP_ID }}"
           private_key: "${{ secrets.BADABUMP_APP_PRIVATE_KEY }}"
 
-      - uses: "actions/checkout@v3.3.0"
+      - uses: "actions/checkout@v4.2.2"
         with:
           ref: "main"
           token: "${{ steps.token.outputs.token }}"
