--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ version_type = "semver"
 
 [tool.black]
 line_length = 79
-target_version = ["py37"]
+target_version = ["py39"]
 
 [tool.coverage.run]
 branch = true
@@ -89,16 +89,16 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.7"
-pre-commit = ">=2.19.0,<4.0"
+python = "^3.9"
+pre-commit = ">=2.19.0,<5.0"
 
 [tool.poetry.group.dev.dependencies]
-mypy = "^1.0.1"
+mypy = "^1.14.0"
 
 [tool.poetry.group.test.dependencies]
-coverage = {extras = ["toml"], version = "^6.5.0"}
+coverage = "^6.5.0"
 coveralls = "^3.3.1"
-pytest = "^7.2.1"
+pytest = "^8.3.4"
 pytest-cov = "^4.0.0"
 
 [tool.poetry.scripts]
