--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,12 +24,12 @@ jobs:
 
     strategy:
       matrix:
-        os: ["ubuntu-latest", "macos-latest"]
+        os: ["ubuntu-24.04", "macos-14"]
 
     runs-on: "${{ matrix.os }}"
 
     steps:
-      - uses: "actions/checkout@v3.3.0"
+      - uses: "actions/checkout@v4.2.2"
 
       - uses: "./.github/actions/install_python_and_poetry"
         with:
@@ -40,7 +40,7 @@ jobs:
         run: "poetry install --only main"
 
       - name: "Check that the poetry.lock file corresponds to the current version of pyproject.toml"
-        if: "${{ matrix.os == 'ubuntu-latest' }}"
+        if: "${{ matrix.os == 'ubuntu-24.04' }}"
         run: "poetry lock --check"
 
       - name: "Import package"
@@ -49,10 +49,10 @@ jobs:
   test:
     name: "Test package"
 
-    runs-on: "ubuntu-latest"
+    runs-on: "ubuntu-24.04"
 
     steps:
-      - uses: "actions/checkout@v3.3.0"
+      - uses: "actions/checkout@v4.2.2"
 
       - id: "python_and_poetry"
         uses: "./.github/actions/install_python_and_poetry"
@@ -75,9 +75,6 @@ jobs:
     needs: ["test"]
 
     uses: "./.github/workflows/ci_package.yml"
-    secrets:
-      pypi-user: "${{ secrets.PYPI_USERNAME }}"
-      pypi-password: "${{ secrets.PYPI_PASSWORD }}"
 
   release:
     needs: ["package"]
