ci: Setup proper permissions for CI Package reusable workflow call

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,6 +74,9 @@ jobs:
   package:
     needs: ["test"]
 
+    permissions:
+      id-token: "write"
+
     uses: "./.github/workflows/ci_package.yml"
 
   release:
